# random_cli

./: .gitignore  .nocommitignore  Cargo.nix  Cargo.toml  dev.sh  flake.nix  generated.rs
btreeprint/: Cargo.toml
btreeprint/src/: adapter.rs  lib.rs  tree.rs
eh_codegen/: Cargo.toml
eh_codegen/src/: codegen.rs  main.rs  schema.rs
eh_codegen/src/codegen/: enums.rs  objects.rs  structs.rs  switch.rs
eh_mod_dev/: Cargo.toml
eh_mod_dev/database/: id_mappings.json5  juh9870-parametric_Ammunition.json  juh9870-parametric_Component.json  juh9870-parametric_Weapon.json
eh_mod_dev/src/: database.rs  layout.rs  main.rs  test_mod.rs
eh_schema/: Cargo.toml
eh_schema/src/: helpers.rs  schema.rs
json_verify/: Cargo.toml
json_verify/src/: main.rs
nocommit/: Cargo.toml
nocommit/src/: main.rs
spm/: Cargo.toml  schema.json
spm/src/: command.rs  config.rs  default_config.json  errors.rs  ide_runner.rs  main.rs  profile.rs  project.rs  project_env.rs  template.rs  types.rs
spm/src/command/: add.rs  profile.rs  run.rs  schema.rs
spm/src/types/: glob.rs  ide_runner.rs  preprocessors.rs  profile.rs  project.rs  project_env.rs  template.rs
xtask/: Cargo.toml
xtask/src/: flags.rs  main.rs
