[workspace]
resolver = "2"

members = ["btreeprint", "eh_codegen", "eh_mod_dev", "eh_schema", "json_verify", "nocommit", "xtask"]

[workspace.dependencies]
ahash = "0.8.7"
bimap = "0.6.3"
clap = "4.4.18"
color-eyre = "0.6.2"
colored = "2.1.0"
convert_case = "0.6.0"
erased-serde = "0.4"
fs-err = "2.11.0"
git2 = "0.18.1"
glam = "0.25.0"
ignore = "0.4.22"
indicatif = "0.17.7"
itertools = "0.12.0"
miette = "7.2.0"
prettyplease = "0.2.16"
proc-macro2 = "1.0.78"
quick-xml = "0.31.0"
quote = "1.0.35"
serde = "1.0.195"
serde_json = "1.0.111"
strum = "0.26.1"
syn = "2.0.52"
termtree = "0.4.1"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-panic = "0.1.1"
tracing-subscriber = "0.3.18"
walkdir = "2.4.0"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
lto = "off"
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 2
