[workspace]
resolver = "2"

members = ["btreeprint", "eh_codegen", "eh_mod_dev", "eh_schema", "json_verify", "nocommit", "spm", "xtask"]

[workspace.dependencies]
ahash = "0.8.7"
clap = "4.4.18"
clap-verbosity-flag = "2.2.0"
cli-table = "0.4.7"
color-backtrace = "0.6"
color-eyre = "0.6.2"
colored = "2.1.0"
convert_case = "0.6.0"
crossterm = "0.27.0"
fs-err = "2.11.0"
git2 = "0.18.1"
glam = "0.26.0"
globwalk = "0.9.1"
home = "0.5.9"
ignore = "0.4.22"
indicatif = "0.17.7"
inquire = "0.7.2"
interpolator = "0.5.0"
itertools = "0.12.0"
miette = "7.2.0"
prettyplease = "0.2.16"
proc-macro2 = "1.0.78"
quick-xml = "0.31.0"
quote = "1.0.35"
schemars = "0.8.16"
serde = "1.0.195"
serde_json = "1.0.111"
serde_json5 = "0.1"
shell-escape = "0.1.5"
shell-words = "1.1.0"
strum = "0.26.1"
syn = "2.0.52"
termtree = "0.4.1"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-panic = "0.1"
tracing-subscriber = "0.3.18"
uncased = "0.9.10"
walkdir = "2.4.0"
which = "6.0.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
lto = "off"
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 2
