[workspace]
repository = "https://github.com/juh9870/random_cli"
resolver = "2"

members = ["btreeprint", "eh_codegen", "eh_mod_dev", "eh_schema", "json_verify", "nocommit", "spm", "xtask"]

[workspace.dependencies]
ahash = "0.8.7"
clap = "4.4.18"
clap-verbosity-flag = "2.2.0"
cli-table = "0.4.7"
color-backtrace = "0.6"
color-eyre = "0.6.2"
colored = "2.1.0"
convert_case = "0.6.0"
crossterm = "0.27.0"
fs-err = "2.11.0"
git2 = "0.18.1"
glam = "0.26.0"
globwalk = "0.9.1"
home = "0.5.9"
ignore = "0.4.22"
indicatif = "0.17.7"
inquire = "0.7.2"
interpolator = "0.5.0"
itertools = "0.12.0"
miette = "7.2.0"
prettyplease = "0.2.16"
proc-macro2 = "1.0.78"
quick-xml = "0.31.0"
quote = "1.0.35"
schemars = "0.8.16"
serde = "1.0.195"
serde_json = "1.0.111"
serde_json5 = "0.1"
shell-escape = "0.1.5"
shell-words = "1.1.0"
strum = "0.26.1"
syn = "2.0.52"
termtree = "0.4.1"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-panic = "0.1"
tracing-subscriber = "0.3.18"
uncased = "0.9.10"
walkdir = "2.4.0"
which = "6.0.1"
openssl-sys = "0.9.102"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
#    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
#    "x86_64-pc-windows-msvc"
]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@juh9870"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Where to host releases
hosting = ["github"]

[workspace.metadata.release]
tag-prefix = "{{crate_name}}/"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
lto = "off"
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 2

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
