[package]
name = "eh_codegen"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
convert_case = "0.6.0"
fs-err = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quick-xml = { workspace = true, features = ["serialize", "serde-types"] }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
syn = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
walkdir = { workspace = true }
