[package]
name = "eh_mod_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { workspace = true, features = ["derive"] }
fs-err = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
eh_schema = { path = "../eh_schema" }
bimap = { workspace = true, features = ["serde"] }
erased-serde = "0.4"
serde_json = { workspace = true }
tracing-panic = "0.1.1"