[package]
name = "eh_schema"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.25.0", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
