[package]
name = "json_verify"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
colored = { workspace = true }
fs-err = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
