[package]
name = "nocommit"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/juh9870/random_cli"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { workspace = true }
btreeprint = { path = "../btreeprint" }
clap = { workspace = true, features = ["derive"] }
color-eyre = { workspace = true }
fs-err = { workspace = true }
git2 = { workspace = true }
ignore = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

#[target.'cfg(target_arch = "aarch64")'.dependencies]
#openssl-sys = { workspace = true, features = ["vendored"] }