[package]
name = "spm"
version = "0.2.4"
edition = "2021"
repository = "https://github.com/juh9870/random_cli"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag = { workspace = true }
cli-table = { workspace = true }
crossterm = { workspace = true }
fs-err = { workspace = true }
globwalk = { workspace = true }
home = { workspace = true }
inquire = { workspace = true }
interpolator = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shell-escape = { workspace = true }
shell-words = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uncased = { workspace = true, features = ["with-serde-alloc", "with-serde"] }
which = { workspace = true }

[package.metadata.dist]
dist = true
